jersey (#940)
* jersey

* fix test

* fix test

* fix test

* fix test

* fix test

* fix test

* bytt til jersey

* bedre tester

* cleanup

* arkivtjeneste

* arkivtjeneste

* arkivtjeneste

* bump2
2

* koble ut legacy

* koble ut legacy

* flere jersey impl